testt changes in apps

--- a/lesson26/Jenkinsfile
+++ b/lesson26/Jenkinsfile
@@ -115,7 +115,7 @@ pipeline {
 
     post {
         always {
-            // архивируем все .jar, чтобы можно было скачивать
+            // архиввация всех .jar
             archiveArtifacts artifacts: '**/target/*.jar', fingerprint: true
         }
     }
