change jenkins file

--- a/lesson26/Jenkinsfile
+++ b/lesson26/Jenkinsfile
@@ -3,56 +3,61 @@ pipeline {
 
     tools {
         maven 'Maven3'
-        jdk   'JDK25'
+        jdk   'JDK17'
     }
 
     environment {
-        APPS = "lesson26/simple-java-maven-app,lesson26/hello-jenkins,lesson26/hello-devops"
+        APPS = 'lesson26/simple-java-maven-app,lesson26/hello-jenkins,lesson26/hello-devops'
     }
 
     stages {
         stage('Detect changes') {
             steps {
                 script {
-                    // список изменённых файлов в этом коммите
-                    def diff = sh(
+                    def diffRaw = sh(
                         script: 'git diff --name-only HEAD~1 HEAD || git diff --name-only HEAD',
                         returnStdout: true
-                    ).trim().split('\n') as List
+                    ).trim()
 
+                    def diff = diffRaw ? diffRaw.split('\n') as List : []
                     echo "Changed files: ${diff}"
 
-                    // директории приложений, в которых есть изменения
-                    changedApps = []
-                    env.APPS.split(',').each { app ->
+                    def apps = env.APPS.split(',') as List
+                    def changedAppsList = []
+
+                    apps.each { app ->
                         if (diff.any { it.startsWith("${app}/") }) {
-                            changedApps << app
+                            changedAppsList << app
                         }
                     }
 
-                    if (changedApps.isEmpty()) {
-                        echo "No app changes detected, skipping build."
-                    } else {
-                        echo "Apps to build: ${changedApps}"
+                    if (changedAppsList.isEmpty() && diff.any { it.endsWith('Jenkinsfile') }) {
+                        changedAppsList = apps
+                        echo "Only Jenkinsfile changed, building all apps: ${changedAppsList}"
                     }
+
+                    env.CHANGED_APPS = changedAppsList.join(',')
+                    echo "CHANGED_APPS = '${env.CHANGED_APPS}'"
                 }
             }
         }
 
         stage('Build and Test in parallel') {
             when {
-                expression { return changedApps && changedApps.size() > 0 }
+                expression { return env.CHANGED_APPS?.trim() }
             }
             parallel {
                 stage('simple-java-maven-app') {
                     when {
-                        expression { return changedApps.contains('simple-java-maven-app') }
+                        expression {
+                            env.CHANGED_APPS.split(',').contains('lesson26/simple-java-maven-app')
+                        }
                     }
                     stages {
                         stage('Build simple') {
                             steps {
                                 dir('lesson26/simple-java-maven-app') {
-                                    sh 'mvn -B -Dmaven.test.failure.ignore=false clean package'
+                                    sh 'mvn -B clean package'
                                 }
                             }
                         }
@@ -68,13 +73,15 @@ pipeline {
 
                 stage('hello-jenkins') {
                     when {
-                        expression { return changedApps.contains('hello-jenkins') }
+                        expression {
+                            env.CHANGED_APPS.split(',').contains('lesson26/hello-jenkins')
+                        }
                     }
                     stages {
                         stage('Build jenkins') {
                             steps {
                                 dir('lesson26/hello-jenkins') {
-                                    sh 'mvn -B -Dmaven.test.failure.ignore=false clean package'
+                                    sh 'mvn -B clean package'
                                 }
                             }
                         }
@@ -90,13 +97,15 @@ pipeline {
 
                 stage('hello-devops') {
                     when {
-                        expression { return changedApps.contains('hello-devops') }
+                        expression {
+                            env.CHANGED_APPS.split(',').contains('lesson26/hello-devops')
+                        }
                     }
                     stages {
                         stage('Build devops') {
                             steps {
                                 dir('lesson26/hello-devops') {
-                                    sh 'mvn -B -Dmaven.test.failure.ignore=false clean package'
+                                    sh 'mvn -B clean package'
                                 }
                             }
                         }
@@ -115,8 +124,17 @@ pipeline {
 
     post {
         always {
-            // архиввация всех .jar
-            archiveArtifacts artifacts: '**/target/*.jar', fingerprint: true
+            script {
+                def jars = sh(
+                    script: 'ls **/target/*.jar 2>/dev/null || echo ""',
+                    returnStdout: true
+                ).trim()
+                if (jars) {
+                    archiveArtifacts artifacts: '**/target/*.jar', fingerprint: true
+                } else {
+                    echo 'No JAR artifacts to archive.'
+                }
+            }
         }
     }
 }
