--- a/.github/workflows/lesson28-ci.yml
+++ b/.github/workflows/lesson28-ci.yml
@@ -3,8 +3,12 @@ name: Maven CI/CD
 on:
   push:
     branches: [ lesson28]
+    paths:
+      - "lesson28/**"
   pull_request:
     branches: [ lesson28 ]
+    paths:
+      - "lesson28/**"
 
 jobs:
   build_and_test:
@@ -12,11 +16,11 @@ jobs:
     runs-on: ubuntu-latest
   
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 14
-      uses: actions/setup-java@v1
+    - uses: actions/checkout@v4
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
       with:
-        java-version: 14
+        java-version: 17
     
     - name: Cache the Maven packages to speed up build
       uses: actions/cache@v3
@@ -33,10 +37,10 @@ jobs:
       runs-on: ubuntu-latest
       needs: [build_and_test]
       steps:
-        - uses: actions/checkout@v2
-        - uses: actions/setup-java@v1
+        - uses: actions/checkout@v4
+        - uses: actions/setup-java@v4
           with:
-            java-version: 14
+            java-version: 17
         - run: mvn -B package --file pom.xml -DskipTests
         - run: mkdir staging && cp target/*.jar staging
         - uses: actions/upload-artifact@v4
@@ -50,7 +54,7 @@ jobs:
     needs: [build_and_test]
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: Login to Docker Hub
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{secrets.DOCKER_PASSWORD }}
       - name: Build Container image
