--- a/.github/workflows/lesson28-ci.yml
+++ b/.github/workflows/lesson28-ci.yml
@@ -20,7 +20,9 @@ jobs:
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
+        distribution: 'temurin'
         java-version: 17
+        cache: 'maven'
     
     - name: Cache the Maven packages to speed up build
       uses: actions/cache@v3
