--- a/.github/workflows/lesson28-ci.yml
+++ b/.github/workflows/lesson28-ci.yml
@@ -2,70 +2,146 @@ name: Maven CI/CD
 
 on:
   push:
-    branches: [ lesson28 ]
+    branches: [ "lesson28" ]
     paths:
       - "lesson28/**"
   pull_request:
-    branches: [ lesson28 ]
+    branches: [ "lesson28" ]
     paths:
       - "lesson28/**"
 
 jobs:
   build_and_test:
-
     runs-on: ubuntu-latest
-  
+
     steps:
-    - name: Checkout
-    - uses: actions/checkout@v4
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        distribution: 'temurin'
-        java-version: 17
-        cache: 'maven'
-    
-    - name: Cache the Maven packages to speed up build
-      uses: actions/cache@v3
-      with:
-        path: ~/.m2
-        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-        restore-keys: ${{ runner.os }}-m2
+      - name: Checkout
+        uses: actions/checkout@v4
 
-    - name: Build hello-world
-      run: mvn -B package --file lesson28/hello-world/pom.xml
-    - name: Build hello-jenkins
-      run: mvn -B package --file lesson28/hello-jenkins/pom.xml
-    - name: Build hello-devops
-      run: mvn -B package --file lesson28/hello-devops/pom.xml
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+          cache: 'maven'
 
-  publish-job:
-      runs-on: ubuntu-latest
-      needs: [build_and_test]
-      steps:
-        - uses: actions/checkout@v4
-        - uses: actions/setup-java@v4
-          with:
-            java-version: 17
-        - run: mvn -B package --file lesson28/hello-world/pom.xml -DskipTests
-        - run: mvn -B package --file lesson28/hello-jenkins/pom.xml -DskipTests
-        - run: mvn -B package --file lesson28/hello-devops/pom.xml -DskipTests
-        - run: mkdir staging && cp target/*.jar staging
-        - uses: actions/upload-artifact@v4
-          with:
-            name: Package
-            path: staging
+      
+      - name: Build hello-world
+        working-directory: lesson28/hello-world
+        run: mvn -B clean package
+
+      - name: Upload hello-world artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: hello-world-jar
+          path: lesson28/hello-world/target/*.jar
+
+      
+      - name: Build hello-jenkins
+        working-directory: lesson28/hello-jenkins
+        run: mvn -B clean package
+
+      - name: Upload hello-jenkins artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: hello-jenkins-jar
+          path: lesson28/hello-jenkins/target/*.jar
+
+      
+      - name: Build hello-devops
+        working-directory: lesson28/hello-devops
+        run: mvn -B clean package
+
+      - name: Upload hello-devops artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: hello-devops-jar
+          path: lesson28/hello-devops/target/*.jar
 
   build-docker-image:
-    name: Publish to Docker Hub
+    name: Publish to Docker Hub and github registry
     runs-on: ubuntu-latest
     needs: [build_and_test]
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Download hello-world artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: hello-world-jar
+          path: lesson28/hello-world/target
+
+      - name: Download hello-jenkins artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: hello-jenkins-jar
+          path: lesson28/hello-jenkins/target
+
+      - name: Download hello-devops artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: hello-devops-jar
+          path: lesson28/hello-devops/target
+
       - name: Login to Docker Hub
-        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{secrets.DOCKER_PASSWORD }}
-      - name: Build Container image
-        run: docker build -t ${{ secrets.DOCKER_REPO }}:latest .
-      - name: Publish Docker image
-        run: docker push ${{ secrets.DOCKER_REPO }}
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.REGISTRY_TOKEN }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      
+      - name: Build and push hello-world image
+        uses: docker/build-push-action@v6
+        with:
+          context: lesson28/hello-world
+          file: lesson28/hello-world/Dockerfile
+          push: true
+          tags: |
+            ${{ secrets.DOCKER_USERNAME }}/hello-world:latest
+            ${{ secrets.DOCKER_USERNAME }}/hello-world:${{ github.sha }}
+            ghcr.io/${{ github.repository_owner }}/hello-world:latest
+            ghcr.io/${{ github.repository_owner }}/hello-world:${{ github.sha }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+      
+      - name: Build and push hello-jenkins image
+        uses: docker/build-push-action@v6
+        with:
+          context: lesson28/hello-jenkins
+          file: lesson28/hello-jenkins/Dockerfile
+          push: true
+          tags: |
+            ${{ secrets.DOCKER_USERNAME }}/hello-jenkins:latest
+            ${{ secrets.DOCKER_USERNAME }}/hello-jenkins:${{ github.sha }}
+            ghcr.io/${{ github.repository_owner }}/hello-jenkins:latest
+            ghcr.io/${{ github.repository_owner }}/hello-jenkins:${{ github.sha }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+      
+      - name: Build and push hello-devops image
+        uses: docker/build-push-action@v6
+        with:
+          context: lesson28/hello-devops
+          file: lesson28/hello-devops/Dockerfile
+          push: true
+          tags: |
+            ${{ secrets.DOCKER_USERNAME }}/hello-devops:latest
+            ${{ secrets.DOCKER_USERNAME }}/hello-devops:${{ github.sha }}
+            ghcr.io/${{ github.repository_owner }}/hello-devops:latest
+            ghcr.io/${{ github.repository_owner }}/hello-devops:${{ github.sha }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
