--- a/.github/workflows/lesson28-ci.yml
+++ b/.github/workflows/lesson28-ci.yml
@@ -111,8 +111,8 @@ jobs:
           tags: |
             ${{ secrets.DOCKER_USERNAME }}/hello-world:latest
             ${{ secrets.DOCKER_USERNAME }}/hello-world:${{ github.sha }}
-            ghcr.io/${{ github.repository_owner }}/hello-world:latest
-            ghcr.io/${{ github.repository_owner }}/hello-world:${{ github.sha }}
+            ghcr.io/${{ github.repository_owner | lower }}/hello-world:latest
+            ghcr.io/${{ github.repository_owner | lower }}/hello-world:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -126,8 +126,8 @@ jobs:
           tags: |
             ${{ secrets.DOCKER_USERNAME }}/hello-jenkins:latest
             ${{ secrets.DOCKER_USERNAME }}/hello-jenkins:${{ github.sha }}
-            ghcr.io/${{ github.repository_owner }}/hello-jenkins:latest
-            ghcr.io/${{ github.repository_owner }}/hello-jenkins:${{ github.sha }}
+            ghcr.io/${{ github.repository_owner | lower }}/hello-jenkins:latest
+            ghcr.io/${{ github.repository_owner | lower }}/hello-jenkins:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -141,7 +141,7 @@ jobs:
           tags: |
             ${{ secrets.DOCKER_USERNAME }}/hello-devops:latest
             ${{ secrets.DOCKER_USERNAME }}/hello-devops:${{ github.sha }}
-            ghcr.io/${{ github.repository_owner }}/hello-devops:latest
-            ghcr.io/${{ github.repository_owner }}/hello-devops:${{ github.sha }}
+            ghcr.io/${{ github.repository_owner | lower }}/hello-devops:latest
+            ghcr.io/${{ github.repository_owner | lower }}/hello-devops:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
