--- a/lesson29/docker-compose.yml
+++ b/lesson29/docker-compose.yml
@@ -1,39 +1,35 @@
 services:
   ui:
-    image: taithanh/reddit:8355f1ebacddce887988ad079a76455f6208ac03
-    container_name: reddit-ui
+    image: ghcr.io/codeby-devops/ui:monitoring
     ports:
-      - "9292:3000"
+      - "9292:9292"
 
+  post:
+    image: ghcr.io/codeby-devops/post:monitoring
+
+  comment:
+    image: ghcr.io/codeby-devops/comment:monitoring
 
   prometheus:
-    image: prom/prometheus:v2.55.0
-    container_name: prometheus
+    image: prom/prometheus
     volumes:
-      - ./prometheus:/etc/prometheus
-    command:
-      - --config.file=/etc/prometheus/prometheus.yml
-      - --storage.tsdb.path=/prometheus
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
     ports:
       - "9090:9090"
 
   grafana:
-    image: grafana/grafana:11.0.0
-    container_name: grafana
+    image: grafana/grafana
     ports:
       - "3000:3000"
     volumes:
-      - grafana-storage:/var/lib/grafana
       - ./grafana/provisioning:/etc/grafana/provisioning
-      - ./grafana/dashboards:/var/lib/grafana/dashboards
-    environment:
-      - GF_SECURITY_ADMIN_PASSWORD=admin
+    depends_on:
+      - prometheus
 
   cadvisor:
-    image: gcr.io/cadvisor/cadvisor:v0.49.1
-    container_name: cadvisor
+    image: gcr.io/cadvisor/cadvisor
     ports:
-      - "8081:8080"
+      - "8080:8080"
     volumes:
       - /:/rootfs:ro
       - /var/run:/var/run:ro
@@ -41,14 +37,8 @@ services:
       - /var/lib/docker/:/var/lib/docker:ro
 
   blackbox:
-    image: prom/blackbox-exporter:v0.25.0
-    container_name: blackbox
+    image: prom/blackbox-exporter
     volumes:
-      - ./prometheus/blackbox.yml:/etc/blackbox_exporter/config.yml
-    command:
-      - --config.file=/etc/blackbox_exporter/config.yml
+      - ./blackbox/blackbox.yml:/etc/blackbox_exporter/config.yml
     ports:
       - "9115:9115"
-
-volumes:
-  grafana-storage:
