--- a/lesson29/grafana/provisioning/dashboards/dashboards.yml
+++ b/lesson29/grafana/provisioning/dashboards/dashboards.yml
@@ -1,10 +1,8 @@
 apiVersion: 1
+
 providers:
-  - name: 'reddit-app'
-    orgId: 1
-    folder: 'Reddit App'
+  - name: Reddit
+    folder: Reddit
     type: file
-    disableDeletion: false
-    updateIntervalSeconds: 30
     options:
-      path: /var/lib/grafana/dashboards
+      path: /etc/grafana/provisioning/dashboards
