--- a/lesson29/prometheus/prometheus.yml
+++ b/lesson29/prometheus/prometheus.yml
@@ -2,49 +2,56 @@ global:
   scrape_interval: 15s
 
 scrape_configs:
-
-  - job_name: 'prometheus'
+  - job_name: prometheus
     static_configs:
-      - targets: ['localhost:9090']
+      - targets: ['prometheus:9090']
 
-
-  - job_name: 'cadvisor'
+  - job_name: cadvisor
     static_configs:
       - targets: ['cadvisor:8080']
 
-
-  - job_name: 'blackbox-ui-root'
+  - job_name: blackbox-ui
     metrics_path: /probe
     params:
       module: [http_2xx]
     static_configs:
-      - targets: ['http://ui:3000/']
+      - targets:
+          - http://ui:9292/
+          - http://ui:9292/new
     relabel_configs:
       - source_labels: [__address__]
         target_label: __param_target
-      - source_labels: [__param_target]
-        target_label: instance
+      - target_label: instance
+        source_labels: [__param_target]
       - target_label: __address__
         replacement: blackbox:9115
-      - source_labels: [__param_target]
-        target_label: path
-        regex: '(.+)'
-        replacement: '/'
 
-  - job_name: 'blackbox-ui-new'
+  - job_name: blackbox-post
     metrics_path: /probe
     params:
-      module: [http_2xx]
+      module: [ http_2xx ]
     static_configs:
-      - targets: ['http://ui:3000/new']
+      - targets:
+          - http://post:5000/health
     relabel_configs:
-      - source_labels: [__address__]
+      - source_labels: [ __address__ ]
         target_label: __param_target
-      - source_labels: [__param_target]
-        target_label: instance
+      - target_label: instance
+        source_labels: [ __param_target ]
       - target_label: __address__
         replacement: blackbox:9115
-      - source_labels: [__param_target]
-        target_label: path
-        regex: '(.+)'
-        replacement: '/new'
+
+  - job_name: blackbox-comment
+    metrics_path: /probe
+    params:
+      module: [ http_2xx ]
+    static_configs:
+      - targets:
+          - http://comment:9292/health
+    relabel_configs:
+      - source_labels: [ __address__ ]
+        target_label: __param_target
+      - target_label: instance
+        source_labels: [ __param_target ]
+      - target_label: __address__
+        replacement: blackbox:9115
