--- a/.github/workflows/maven-ci-cd.yml
+++ b/.github/workflows/maven-ci-cd.yml
@@ -1,4 +1,4 @@
-name: Maven CI/CD
+name: diplom app CI/CD
 
 on:
   push:
@@ -29,30 +29,30 @@ jobs:
         working-directory: final/diplom-app
         run: mvn -B clean package -DskipTests
 
-#      - name: Upload App artifact
-#        uses: actions/upload-artifact@v4
-#        with:
-#          name: diplom-app-jar
-#          path: final/diplom-app/target/*.jar
+      - name: Upload App artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: diplom-app-jar
+          path: final/diplom-app/target/*.jar
 
-#  build-docker-image:
-#    name: Publish to github registry
-#    runs-on: ubuntu-latest
-#    needs: [build_and_test]
+  build-docker-image:
+    name: Publish to github registry
+    runs-on: ubuntu-latest
+    needs: [build_and_test]
 
-#    permissions:
-#      contents: read
-#      packages: write
+    permissions:
+      contents: read
+      packages: write
 
-#    steps:
-#      - name: Checkout
-#        uses: actions/checkout@v4
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
-#      - name: Download diplom-app artifact
-#        uses: actions/download-artifact@v4
-#        with:
-#          name: diplom-app-jar
-#          path: final/diplom-app/target
+      - name: Download diplom-app artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: diplom-app-jar
+          path: final/diplom-app/target
 
 
       - name: Login to GitHub Container Registry
