--- a/.github/workflows/maven-ci-cd.yml
+++ b/.github/workflows/maven-ci-cd.yml
@@ -65,7 +65,7 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ github.repository_owner }}
+          username: condorrus21
           password: ${{ secrets.GHCR_TOKEN }}
 
       - name: Set up Docker Buildx
@@ -80,7 +80,7 @@ jobs:
           push: true
           tags: |
             
-            ghcr.io/${{ github.repository_owner }}/codeby-devops:diplom-app-${{ github.sha }}
-            ghcr.io/${{ github.repository_owner }}/codeby-devops:diplom-app-latest
+            ghcr.io/condorrus21/codeby-devops:diplom-app:latest
+            ghcr.io/condorrus21/codeby-devops:diplom-app:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
