--- a/.github/workflows/maven-ci-cd.yml
+++ b/.github/workflows/maven-ci-cd.yml
@@ -60,12 +60,14 @@ jobs:
 #          name: diplom-app-jar
 #          path: final/diplom-app/target
 
+      - name: Set lowercase owner
+        run: echo "OWNER_LC=${{ github.repository_owner, }} " >> $GITHUB_ENV
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: condorrus21
+          username: ${{ github.repository_owner }}
           password: ${{ secrets.GHCR_TOKEN }}
 
       - name: Set up Docker Buildx
@@ -80,7 +82,7 @@ jobs:
           push: true
           tags: |
             
-            ghcr.io/condorrus21/codeby-devops:diplom-app:latest
-            ghcr.io/condorrus21/codeby-devops:diplom-app:${{ github.sha }}
+            ghcr.io/${{ env.OWNER_LC }}/codeby-devops:diplom-app-latest
+            ghcr.io/${{ env.OWNER_LC }}/codeby-devops:diplom-app-${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
