--- a/.github/workflows/maven-ci-cd.yml
+++ b/.github/workflows/maven-ci-cd.yml
@@ -61,13 +61,15 @@ jobs:
 #          path: final/diplom-app/target
 
       - name: Set lowercase owner
-        run: echo "OWNER_LC=${{ github.repository_owner, }} " >> $GITHUB_ENV
+        run: echo "OWNER_LC=${OWNER,,}" >> $GITHUB_ENV
+        env:
+          OWNER: ${{ github.repository_owner }}
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ github.repository_owner }}
+          username: ${{ env.OWNER_LC }}
           password: ${{ secrets.GHCR_TOKEN }}
 
       - name: Set up Docker Buildx
