--- a/.github/workflows/maven-ci-cd.yml
+++ b/.github/workflows/maven-ci-cd.yml
@@ -3,12 +3,8 @@ name: diplom app CI/CD
 on:
   push:
     branches: [ "final" ]
-#    paths:
-#      - "final/**"
   pull_request:
     branches: [ "final" ]
-#    paths:
-#      - "final/**"
 
 jobs:
   build_and_test:
@@ -19,6 +15,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -27,38 +25,32 @@ jobs:
           java-version: '17'
           cache: 'maven'
 
-      - name: Build with Maven
+      - name: Build with Maven + unit tests
         working-directory: final/diplom-app
-        run: mvn -B clean package -DskipTests
+        run: mvn -B clean verify
+
+      - name: Upload test reports
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: surefire-reports
+          path: final/diplom-app/target/surefire-reports/**
+
+      - name: SonarCloud analysis
+        working-directory: final/diplom-app
+        run: >
+          mvn -B
+          org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
+          -Dsonar.host.url=https://sonarcloud.io
+          -Dsonar.organization=${{ vars.SONAR_ORGANIZATION }}
+          -Dsonar.projectKey=${{ vars.SONAR_PROJECT_KEY }}
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Debug JAR
         working-directory: final/diplom-app
         run: ls -la target/
-
-#      - name: Upload App artifact
-#        uses: actions/upload-artifact@v4
-#        with:
-#          name: diplom-app-jar
-#          path: final/diplom-app/target/*.jar
-
-#  build-docker-image:
-#    name: Publish to github registry
-#    runs-on: ubuntu-latest
-#    needs: [build_and_test]
-
-#    permissions:
-#      contents: read
-#      packages: write
-
-#    steps:
-#      - name: Checkout
-#        uses: actions/checkout@v4
-
-#      - name: Download diplom-app artifact
-#        uses: actions/download-artifact@v4
-#        with:
-#          name: diplom-app-jar
-#          path: final/diplom-app/target
 
       - name: Set lowercase owner
         run: echo "OWNER_LC=${OWNER,,}" >> $GITHUB_ENV
@@ -75,7 +67,6 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-
       - name: Build and push diplom-app image
         uses: docker/build-push-action@v6
         with:
@@ -83,7 +74,6 @@ jobs:
           file: final/Dockerfile
           push: true
           tags: |
-            
             ghcr.io/${{ env.OWNER_LC }}/codeby-devops:diplom-app-latest
             ghcr.io/${{ env.OWNER_LC }}/codeby-devops:diplom-app-${{ github.sha }}
           cache-from: type=gha
