--- a/.github/workflows/maven-ci-cd.yml
+++ b/.github/workflows/maven-ci-cd.yml
@@ -36,7 +36,7 @@ jobs:
           name: surefire-reports
           path: final/diplom-app/target/surefire-reports/**
 
-      - name: SonarCloud analysis
+      - name: SonarCloud analys
         working-directory: final/diplom-app
         run: >
           mvn -B
